--- a/public/assets/css/admin/adminArticles.css
+++ b/public/assets/css/admin/adminArticles.css
@@ -47,3 +47,28 @@ main {
     text-decoration: underline;
     font-weight: bold;
 }
+
+.filterButtons {
+    display: flex;
+    justify-content: space-around;
+    margin: 3rem;
+}
+
+.filterButton {
+    background: var(--admin-color);
+    margin: 0.5rem;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    color: var(--our-black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.filterButton:hover {
+    background: whitesmoke;
+    color: var(--our-black);
+}
