improved admin structure folders

--- a/src/View/Admin/Article/index.html.twig
+++ b/src/View/Admin/Article/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'AdminLayout.html.twig' %}
+{% extends 'Admin/adminLayout.html.twig' %}
 
 {% block stylesheet %}
     <link rel="stylesheet" href="/assets/css/admin/adminArticles.css">
