added 'articles publiés' filter

--- a/src/View/Admin/Article/index.html.twig
+++ b/src/View/Admin/Article/index.html.twig
@@ -8,6 +8,7 @@
     <main>
         <section class="filterButtons">
             <a class="filterButton" href="/admin/articles/">Tous les articles</a>
+            <a class="filterButton" href="/admin/articles?status=published">Articles publiés</a>
             <a class="filterButton" href="/admin/articles?status=archived">Articles archivés</a>
             <a class="filterButton" href="/admin/articles?status=draft">Brouillons</a>
         </section>
