--- a/src/View/Admin/adminLayout.html.twig
+++ b/src/View/Admin/adminLayout.html.twig
@@ -8,7 +8,7 @@
 
     <title>{% block title %}Admin{% endblock %}</title>
 
-    <link rel="stylesheet" href="/assets/css/headerAdmin.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/global.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,9 +18,10 @@
 </head>
 
 <body id="body">
-{% include 'components/_headerAdmin.html.twig' %}
+{% include 'Admin/components/_headerAdmin.html.twig' %}
 {% block content %}{% endblock %}
 {% block javascript %}{% endblock %}
+<script src="/assets/js/header.js"></script>
 </body>
 </html>
 
