--- a/src/View/Admin/components/_headerAdmin.html.twig
+++ b/src/View/Admin/components/_headerAdmin.html.twig
@@ -24,7 +24,7 @@
         <ul class="nav admin-header ">
             <li><a href="/admin/articles">Articles</a></li>
             <li><a href="#">Utilisateurs</a></li>
-            <li><a href="#">Déconnexion</a></li>
+            <li><a href="/admin/logout">Déconnexion</a></li>
         </ul>
     </div>
 </div>
