--- a/src/View/Admin/Article/index.html.twig
+++ b/src/View/Admin/Article/index.html.twig
@@ -31,9 +31,12 @@
                         </small>
                     </div>
                     <div class="buttons">
-                        <a class="seeButton articlesButton" href="/article?id={{ article.id }}"><img src="/assets/images/components/mdi_eye-outline.svg" alt="icone d'un oeil ouvert" class="svg-icon" /></a>
+                        {% if article.status == 2 %}
+                            <img data-id="{{ article.id }}" data-title="{{ article.homeTitle }}" class="mainButton {{ article.id == mainArticleId ? 'disabled'}}" src="/assets/images/components/crown-{{ article.id == mainArticleId ? 'green' : 'gray'}}.svg" alt="icone d'un oeil ouvert" />
+                        {% endif %}
+                        <a class="seeButton articlesButton {{ article.status != 2 ? 'marged' }}" href="/article?id={{ article.id }}"><img src="/assets/images/components/mdi_eye-outline.svg" alt="icone d'un oeil ouvert" class="svg-icon" /></a>
                         <a class="editButton articlesButton" href="/admin/articles/edit/{{ article.id }}"><img src="/assets/images/components/bx_edit.svg" alt="icone d'un crayon dans un bloc" class="svg-icon" /></a>
-                        <img data-id="{{ article.id }}" data-title="{{ article.homeTitle }}" class="mainButton {{ article.id == mainArticleId ? 'disabled'}}" src="/assets/images/components/crown-{{ article.id == mainArticleId ? 'green' : 'gray'}}.svg" alt="icone d'un oeil ouvert" />
+
                     </div>
                 </div>
             {% endfor %}
@@ -41,7 +44,6 @@
         <section class="modalMain">
             <div class="modalMainContent">
                 <p class="pConfirmation">Êtes-vous sûr de vouloir mettre cet article en avant ?</p>
-                <p class="warning">⚠️ Attention, cette action publiera l'article automatiquement ⚠️</p>
                 <p class="articleTitle"></p>
                 <div class="modalMainButtons">
                     <a class="globalButton modalMainButton" href="">Oui</a>
