--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -2,11 +2,30 @@
 {% block stylesheet %}
 	<link rel="stylesheet" href="/assets/css/home.css">
 {% endblock %}
+{% set mainId = mainArticle.id %}
+
 {% block content %}
-	<main>
+    {% set newArray = [] %}
+
+    {% for article in fusion %}
+        {% set duplicate = false %}
+        {% for item in newArray %}
+            {% if item.id == article.id %}
+                {% set duplicate = true %}
+            {% endif %}
+        {% endfor %}
+
+        {% if not duplicate %}
+            {% set newArray = newArray|merge([article]) %}
+            {{ article.id }}
+        {% endif %}
+    {% endfor %}
+
+    <main>
 		<section class="hotNews_block">
+            {% for mainArticle in newArray|slice(0,1) %}
 			<article class="card bigNews">
-				<a href="/article?id={{mainArticle.id}}">
+				<a href="/article?id={{mainId}}">
 					<pre></pre>
 					<div class="title_bigNews title_news">
 						<img class="big" src="{{ mainArticle.imgSrc }}" alt="{{ mainArticle.altImg}}">
@@ -17,39 +36,40 @@
 					</div>
 				</a>
 			</article>
+            {% endfor %}
 
 			<article class="card middle_news">
-				{% for relatedArticle in relatedArticles %}
-					<a href="/article?id={{relatedArticle.id }}">
-						<div class="card1">
-							<img class="small" src="{{ relatedArticle.imgSrc }}" alt="{{ relatedArticle.altImg }}">
-							<h2>{{ relatedArticle.homeTitle }}</h2>
-						</div>
-					</a>
-				{% endfor  %}
+                {% for relatedArticle in newArray|slice(1,2) %}
+                    <a href="/article?id={{ relatedArticle.id }}">
+                        <div class="card1">
+                            <img class="small" src="{{ relatedArticle.imgSrc }}" alt="{{ relatedArticle.altImg }}">
+                            <h2>{{ relatedArticle.homeTitle }}</h2>
+                        </div>
+                    </a>
+                {% endfor %}
 			</article>
 		</section>
 		<span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
 
 		<section class="article_list">
-			{% for allArticle in allArticles %}
-				<a href="/article?id={{ allArticle.id }}">
-					<article class="article_block">
-						<div class="card_container">
-							<div class="card2">
-								<img class="medium" src="{{ allArticle.imgSrc }}" alt="{{ allArticle.altImg }}">
-							</div>
-						</div>
-						<div class="little_article">
-							<h3>
-								{{ allArticle.homeTitle }}
-							</h3>
-							<p>{{ allArticle.description }}
-							</p>
-						</div>
-					</article>
-				</a>
-			{% endfor %}
+            {{ slicer }}
+            {% for allArticle in newArray|slice(3) %}
+                <a href="/article?id={{ allArticle.id }}">
+                    <article class="article_block">
+                        <div class="card_container">
+                            <div class="card2">
+                                <img class="medium" src="{{ allArticle.imgSrc }}" alt="{{ allArticle.altImg }}">
+                            </div>
+                        </div>
+                        <div class="little_article">
+                            <h3>
+                                {{ allArticle.homeTitle }}
+                            </h3>
+                            <p>{{ allArticle.description }}</p>
+                        </div>
+                    </article>
+                </a>
+            {% endfor %}
 		</section>
 	</main>
 {% endblock %}
