--- a/src/View/Admin/Article/index.html.twig
+++ b/src/View/Admin/Article/index.html.twig
@@ -12,6 +12,9 @@
             <a class="filterButton" href="/admin/articles?status=archived">Articles archivés</a>
             <a class="filterButton" href="/admin/articles?status=draft">Brouillons</a>
         </section>
+        <div class="plusDiv">
+            <a href="/admin/article/add"><img class="add" src="/assets/images/components/plus.svg" alt="icone d'un plus" /></a>
+        </div>
         <section class="articles">
             {{ articles.error ?? '' }}
 
