--- a/src/View/Article/article.html.twig
+++ b/src/View/Article/article.html.twig
@@ -14,7 +14,7 @@
             </h1>
 
             <p class="content-width article_P">
-                {{ article.description }}
+                {{ article.description|raw}}
             </p>
         </section>
         <section id="img_section">
@@ -25,7 +25,7 @@
         <section class="content-width body_text">
             <h2 class="body_title">Introduction</h2>
             <p class="article_P">
-                {{ article.introduction }}
+                {{ article.introduction|raw}}
             </p>
 
             <h2 class="body_title">Le détail</h2>
