--- a/src/View/Admin/Article/add.html.twig
+++ b/src/View/Admin/Article/add.html.twig
@@ -1,9 +1,11 @@
 {% extends 'Admin/adminLayout.html.twig' %}
 {% block title %} Add article {% endblock %}
 {% block stylesheet %}
+    <link rel="stylesheet" href="/assets/css/admin/adminArticle.css">
 {% endblock %}
 {% block content %}
 <main>
+    <h1>Add un article</h1>
     {% include 'Admin/components/_form_article.html.twig' %}
 </main>
 
