--- a/src/View/Admin/Article/index.html.twig
+++ b/src/View/Admin/Article/index.html.twig
@@ -13,7 +13,7 @@
             <a class="filterButton" href="/admin/articles?status=draft">Brouillons</a>
         </section>
         <div class="plusDiv">
-            <a href="/admin/article/add"><img class="add" src="/assets/images/components/plus.svg" alt="icone d'un plus" /></a>
+            <a href="/admin/article/add"><img class="add" src="/assets/images/components/plus.svg" alt="Ajoutez un article" /></a>
         </div>
         <section class="articles">
             {{ articles.error ?? '' }}
