--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -5,27 +5,10 @@
 {% set mainId = mainArticle.id %}
 
 {% block content %}
-    {% set newArray = [] %}
-
-    {% for article in fusion %}
-        {% set duplicate = false %}
-        {% for item in newArray %}
-            {% if item.id == article.id %}
-                {% set duplicate = true %}
-            {% endif %}
-        {% endfor %}
-
-        {% if not duplicate %}
-            {% set newArray = newArray|merge([article]) %}
-            {{ article.id }}
-        {% endif %}
-    {% endfor %}
-
     <main>
 		<section class="hotNews_block">
-            {% for mainArticle in newArray|slice(0,1) %}
 			<article class="card bigNews">
-				<a href="/article?id={{mainId}}">
+				<a href="/article?id={{mainArticle.id}}">
 					<pre></pre>
 					<div class="title_bigNews title_news">
 						<img class="big" src="{{ mainArticle.imgSrc }}" alt="{{ mainArticle.altImg}}">
@@ -36,10 +19,9 @@
 					</div>
 				</a>
 			</article>
-            {% endfor %}
 
 			<article class="card middle_news">
-                {% for relatedArticle in newArray|slice(1,2) %}
+                {% for relatedArticle in relatedArticles %}
                     <a href="/article?id={{ relatedArticle.id }}">
                         <div class="card1">
                             <img class="small" src="{{ relatedArticle.imgSrc }}" alt="{{ relatedArticle.altImg }}">
@@ -52,7 +34,7 @@
 		<span class="separation_bar"><img class="separation" src="/assets/images/components/separation.svg" alt="Barre de séparation"></span>
 
 		<section class="article_list">
-            {% for allArticle in newArray|slice(3) %}
+            {% for allArticle in allArticles %}
                 <a href="/article?id={{ allArticle.id }}">
                     <article class="article_block">
                         <div class="card_container">
