add check form article

--- a/src/View/Admin/Article/add.html.twig
+++ b/src/View/Admin/Article/add.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 <main>
-    <h1>Add un article</h1>
+    <h1>Ajouter un article</h1>
     {% include 'Admin/components/_form_article.html.twig' %}
 </main>
 
