--- a/public/assets/css/admin/adminArticle.css
+++ b/public/assets/css/admin/adminArticle.css
@@ -41,3 +41,11 @@ div{
     text-decoration: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+.error {
+    color: red;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
