--- a/src/View/Admin/components/_form_article.html.twig
+++ b/src/View/Admin/components/_form_article.html.twig
@@ -1,4 +1,10 @@
 {% block content %}
+    {% if errors is defined %}
+        {% for error in errors %}
+            <p class="error">{{ error }}</p>
+        {% endfor %}
+    {% endif %}
+
     <form action="" method="post" enctype="multipart/form-data">
         <div>
             <label for="title">Titre de votre article </label>
