--- a/public/assets/css/admin/adminArticles.css
+++ b/public/assets/css/admin/adminArticles.css
@@ -89,20 +89,15 @@ main {
 }
 
 .modalMain {
-    position: sticky;
-    background: whitesmoke;
-    width: 40rem;
-    height: 15rem;
-    bottom: 50vh;
+    position: fixed;
+    background: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    top: 0;
     left: 0;
     z-index: 10;
     overflow: auto;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
     display: none;
-    border-radius: 10px;
-    border: 1px solid var(--our-black);
 }
 
 .displayed {
@@ -115,12 +110,15 @@ main {
 }
 
 .modalMainContent {
-    width: 100%;
-    height: 100%;
+    width: 40rem;
+    height: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin: auto;
+    background: whitesmoke;
+    border-radius: 10px;
 }
 
 .pConfirmation {
@@ -194,4 +192,9 @@ main {
 .add:hover {
     transform: scale(1.1);
     cursor: pointer;
+}
+
+.filtered {
+    background: whitesmoke;
+    color: var(--our-black);
 }
