--- a/src/View/Admin/components/_headerAdmin.html.twig
+++ b/src/View/Admin/components/_headerAdmin.html.twig
@@ -5,7 +5,7 @@
 
     <ul id="list_nav_header">
         <li><a href="/admin/articles">Articles</a></li>
-        <li><a href="#">Utilisateurs</a></li>
+        <li><a href="/admin/categories" id="{{ page == 'categories' ? 'thisPage' : ''}}">Catégories</a></li>
         <li><a href="/admin/logout">Déconnexion</a></li>
     </ul>
 
@@ -23,7 +23,7 @@
     <div id="menu-mainmenu">
         <ul class="nav admin-header ">
             <li><a href="/admin/articles">Articles</a></li>
-            <li><a href="#">Utilisateurs</a></li>
+            <li><a href="/admin/categories">Catégories</a></li>
             <li><a href="/admin/logout">Déconnexion</a></li>
         </ul>
     </div>
