--- a/public/assets/css/admin/adminArticle.css
+++ b/public/assets/css/admin/adminArticle.css
@@ -14,6 +14,68 @@ div{
     flex-direction: column;
 }
 
+.modalMain {
+    position: fixed;
+    background: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    overflow: auto;
+    display: none;
+}
+
+.displayed {
+    display: flex
+}
+
+.blurred {
+    filter: blur(4px);
+    pointer-events: none;
+}
+
+.modalMainContent {
+    width: 40rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    background: whitesmoke;
+    border-radius: 10px;
+}
+
+.pConfirmation {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--our-black);
+}
+
+.globalButton {
+    margin: 0.5rem;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    color: var(--our-black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.modalMainButton {
+    background: green;
+}
+
+.modalNoButton {
+    background: #d90000;
+    border: none;
+    font-size: 1rem;
+}
+
 #validate{
     background: green;
     margin: 0.5rem;
