grumpy fix reclamation3

--- a/src/View/Admin/components/_form_article.html.twig
+++ b/src/View/Admin/components/_form_article.html.twig
@@ -51,7 +51,7 @@
         </div>
         <div>
             <label for="imageUpload">Télécharger votre image d'article</label>
-            <input type="file" name="imageUpload" id="imageUpload" required/>
+            <input type="file" name="imageUpload" id="imageUpload" />
         </div>
         <div>
             <input id="validate" type="submit" value="Valider">
