--- a/public/assets/css/admin/adminArticleUpdate.css
+++ b/public/assets/css/admin/adminArticleUpdate.css
@@ -71,6 +71,11 @@ div{
     border-radius: 15px;
     font-size: 1rem;
     cursor: pointer;
+    object-fit: cover;
+}
+
+.imgPreview {
+    object-fit: cover;
 }
 
 
