--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -64,7 +64,11 @@
 	<div class="blockUploadImg">
         <div class="inputChoice">
             <label for="imageUpload">Télécharger votre image d'article</label>
-            <input type="file" name="imageUpload" id="imageUpload" required value = "Sélectionner un fichier"/>
+            <input type="file" name="imageUpload" id="imageUpload" required onchange="previewImage(event)"  value = "Sélectionner un fichier"/>
+            <div class="imgPreview">
+                <img id="preview"/>
+            </div>
+            
         </div>
 		
         <div class="blockImage">
@@ -79,3 +83,5 @@
 	
 </form>
 {% endblock %}
+
+{% block javascript %}<script> src=/assets/js/admin/updateForm.js </script> {% endblock %}
