--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -1,5 +1,7 @@
+{% block stylesheet %}<link rel="stylesheet" href="/assets/css/admin/adminArticleUpdate.css">{% endblock %} 
 {% block content %}
 	<form action="" method="post" enctype="multipart/form-data">
+        <input type="hidden" name="imgSrc" value="{{articleUpdate.imgSrc}}"/>
 		<div class="articleTitle" "shortInput">
 			<label for="title">Titre de votre article
 			</label>
@@ -64,11 +66,11 @@
 	<div class="blockUploadImg">
         <div class="inputChoice">
             <label for="imageUpload">Télécharger votre image d'article</label>
-            <input type="file" name="imageUpload" id="imageUpload" required onchange="previewImage(event)"  value = "Sélectionner un fichier"/>
+            <input type="file" name="imageUpload" id="imageUpload" onchange="previewImage(event)"  value = "Sélectionner un fichier"/>
             <div class="imgPreview">
                 <img id="preview"/>
             </div>
-            
+    
         </div>
 		
         <div class="blockImage">
