add js for new image in update form

--- a/public/assets/css/admin/adminArticleUpdate.css
+++ b/public/assets/css/admin/adminArticleUpdate.css
@@ -74,8 +74,9 @@ div{
     object-fit: cover;
 }
 
-.imgPreview {
-    object-fit: cover;
+#previewImage {
+    width: 300px;
+    height: 187px;
 }
 
 
