--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -65,9 +65,14 @@
         </div>
 	<div class="blockUploadImg">
         <div class="inputChoice">
-            <label for="imageUpload">Télécharger votre image d'article</label>
-            <input type="file" name="imageUpload" id="imageUpload" value = "Sélectionner un fichier"/>
-            <img id="preview"/>
+            <div class="fileSelection">
+                <label for="imageUpload" class="labelImage">Télécharger votre nouvelle image d'article</label>
+                <input type="file" name="imageUpload" id="imageUpload" value = "Sélectionner un fichier"/>
+            </div>
+            <div class="blockNewImage">
+                <label for="newImg">Aperçu de votre nouvelle image</label>
+                <img id="preview"/>
+            </div>
         </div>
 		
         <div class="blockImage">
