--- a/public/assets/css/admin/adminArticle.css
+++ b/public/assets/css/admin/adminArticle.css
@@ -1,12 +1,34 @@
 main {
     min-width: 30rem;
     margin: 0 auto;
-    max-width: 60rem;
+    max-width: 70rem;
     width: auto;
+}
+
+h1 {
+    margin-top: 30px;
+}
+
+form {
+    margin-top: 30px;
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+    height: 1500px;
+}
+
+
+input :not(:last-child){
+    margin-bottom: 1rem;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    padding: 0.5rem;
+}
+
+.blockCategory, .blockAuthor, .blockStatus {
+    width: 300px;
+    justify-content: space-around;
 }
 
 div{
@@ -14,22 +36,136 @@ div{
     flex-direction: column;
 }
 
-#validate{
+.blockSelect{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
+
+.blockImage {
+    width: 300px;
+    height: 179px;
+    overflow: hidden;
+}
+
+.inputChoice {
+    width:300px;
+    gap: 1rem;
+}
+
+
+.inputChoice label {
+    margin-top: 2px;
+}
+
+#imageUpload {
+    background-color:var(--admin-color);
+    width: 11rem;
+    height: 50px;
+    border-radius: 15px;
+    font-size: 1rem;
+    cursor: pointer;
+    object-fit: cover;
+}
+
+.imgPreview {
+    object-fit: cover;
+}
+
+
+.blockUploadImg {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    gap: 2rem;
+}
+
+.blockImage {
+    object-fit: cover;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-bottom: 50px;
+
+}
+
+.formValidate{
+    cursor: pointer;
     background: green;
     margin: 0.5rem;
     width: 10rem;
     height: 2.5rem;
     border-radius: 10px;
-    color: var(--our-black);
     display: flex;
     justify-content: center;
     align-self: center;
     text-decoration: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
 }
 
-#cancel{
+.formCancel{
+    cursor: pointer;
     background: red;
+    margin: 0.5rem;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+}
+
+.formValidate:hover{
+    background: #189b18;
+}
+
+.formCancel:hover{
+    background: #b30000;
+}
+
+.modalMain {
+    position: fixed;
+    background: rgba(0,0,0,0.4);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    overflow: auto;
+    display: none;
+}
+
+.displayed {
+    display: flex
+}
+
+.modalMainContent {
+    width: 40rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: auto;
+    background: whitesmoke;
+    border-radius: 10px;
+}
+
+.pConfirmation {
+    font-size: 1.3rem;
+    font-weight: bold;
+    color: var(--our-black);
+}
+
+.globalButton {
     margin: 0.5rem;
     width: 10rem;
     height: 2.5rem;
@@ -40,6 +176,27 @@ div{
     align-items: center;
     text-decoration: none;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.modalMainButton {
+    background: green;
+    cursor: pointer;
+    border: none;
+}
+
+.modalNoButton {
+    background: #d90000;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.modalMainButton:hover {
+    background: #189b18;
+}
+
+.modalNoButton:hover {
+    background: #b30000;
 }
 
 .error {
