--- a/src/View/Admin/components/_form_article.html.twig
+++ b/src/View/Admin/components/_form_article.html.twig
@@ -6,13 +6,13 @@
     {% endif %}
 
     <form action="" method="post" enctype="multipart/form-data">
-        <div>
+        <div class="articleTitle">
             <label for="title">Titre de votre article </label>
             <input type="text" name="title" id="title" required />
         </div>
         <div>
             <label for="hometitle">Titre de votre article depuis la home</label>
-            <input type="text" name="hometitle" id="hometitle" required />
+            <input type="text" name="homeTitle" id="hometitle" required />
         </div>
         <div>
             <label for="description">Description de votre article </label>
@@ -28,9 +28,10 @@
         </div>
         <div>
             <label for="homepreview">Courte description de votre article pour la home</label>
-            <textarea id="homepreview" rows="10" name="homepreview" required></textarea>
+            <textarea id="homepreview" rows="10" name="homePreview" required></textarea>
         </div>
-        <div>
+        <div class="blockSelect">
+            <div class="blockCategory">
             <label for="category">Choix de la catégorie </label>
             <select name="category">
                 {% for category in categories %}
@@ -38,7 +39,7 @@
                 {% endfor %}
             </select>
         </div>
-        <div>
+        <div class="blockAuthor">
             <label for="author">Choix de l'auteur </label>
             <select name="author">
                 {% for author in authors %}
@@ -47,7 +48,7 @@
                 {% endfor %}
             </select>
         </div>
-        <div>
+        <div class="blockStatus">
             <label for="status">Choix du statut </label>
             <select name="status">
                 <option value="1">Brouillon</option>
@@ -55,14 +56,30 @@
                 <option value="3">Archivé</option>
             </select>
         </div>
+        </div>
         <div>
             <label for="imageUpload">Télécharger votre image d'article</label>
-            <input type="file" name="imageUpload" id="imageUpload" />
+            <input type="file" name="imageUpload" id="imageUpload" required/>
         </div>
+        <div class="buttons">
         <div>
-            <input id="validate" type="submit" value="Valider">
+            <input class="formValidate" type="button" value="Valider">
+        </div>
+        <section class="modalMain">
+            <div class="modalMainContent">
+                <p class="pConfirmation"></p>
+                <div class="modalMainButtons">
+                    <input type="submit" id="validateForm" value="Confirmer" class="globalButton modalMainButton"/>
+                    <button type="button" class="globalButton modalNoButton" id="cancelForm">Annuler</button>
+                </div>
+            </div>
+        </section>
+        <button type="button" class="formCancel">Annuler</button>
         </div>
     </form>
-    <a id="cancel" href="/admin/articles/" >Annuler</a>
 
+{% endblock %}
+
+{% block javascript %}
+<script src="/assets/js/admin/adminFormArticle.js"></script>
 {% endblock %}
