refacto & fix form article

--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -8,8 +8,7 @@
     <form class="formArticle" action="" method="post" enctype="multipart/form-data">
         <input type="hidden" name="imgSrc" value="{{articleUpdate.imgSrc}}"/>
 		<div class="articleTitle">
-			<label for="title">Titre de votre article
-			</label>
+			<label for="title">Titre de votre article</label>
 			<input type="text" name="title" id="title" required value="{{articleUpdate.articleTitle}}"/>
 		</div>
 		<div>
@@ -98,7 +97,6 @@
             </section>
             <button type="button" class="formCancel">Annuler</button>
         </div>
-
 </form>
 {% endblock %}
 
