--- a/src/View/Admin/components/_form_articleUpdate.html.twig
+++ b/src/View/Admin/components/_form_articleUpdate.html.twig
@@ -1,15 +1,16 @@
-
 {% block content %}
 	<form action="" method="post" enctype="multipart/form-data">
-        <input type="hidden" name="imgSrc" value="{{articleUpdate.imgSrc}}"/>
-		<div class="articleTitle" "shortInput">
-			<label for="title">Titre de votre article
-			</label>
-			<input type="text" name="title" id="title" required value="{{articleUpdate.articleTitle}}"/>
-		</div>
-		<div>
-			<label for="hometitle">"Titre de votre article depuis la home"</label>
-			<input type="text" name="hometitle" id="hometitle" required value="{{articleUpdate.homeTitle}}"/>
+		<input type="hidden" name="imgSrc" value="{{articleUpdate.imgSrc}}"/>
+		<div class="littleInput">
+			<div class="articleTitle" "shortInput">
+				<label for="title">Titre de votre article
+				</label>
+				<input type="text" name="title" id="title" required value="{{articleUpdate.articleTitle}}"/>
+			</div>
+			<div>
+				<label for="hometitle">Titre de votre article depuis la home</label>
+				<input type="text" name="hometitle" id="hometitle" required value="{{articleUpdate.homeTitle}}"/>
+			</div>
 		</div>
 		<div>
 			<label for="description">Description de votre article
@@ -31,58 +32,58 @@
 			<textarea id="homepreview" rows="10" name="homepreview" required>{{articleUpdate.homepreview}}</textarea>
 		</div>
 		<div class="blockSelect">
-            <div class="blockCategory">
-                <label for="category">Choix de la catégorie
-                </label>
-                <select name="category">
-                    {% for category in categories %}
-                        <option value="{{ category.id }}">
-                            {{ category.categoryName }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="blockAuthor">
-                <label for="author">Choix de l'auteur
-                </label>
-                <select name="author">
-                    {% for author in authors %}
-                        <option value="{{ author.id }}">
-                            {{ author.firstName }}
-                            {{ author
+			<div class="blockCategory">
+				<label for="category">Choix de la catégorie
+				</label>
+				<select name="category">
+					{% for category in categories %}
+						<option value="{{ category.id }}">
+							{{ category.categoryName }}</option>
+					{% endfor %}
+				</select>
+			</div>
+			<div class="blockAuthor">
+				<label for="author">Choix de l'auteur
+				</label>
+				<select name="author">
+					{% for author in authors %}
+						<option value="{{ author.id }}">
+							{{ author.firstName }}
+							{{ author
                             .lastName }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="blockStatus">
-                <label for="status">Choix du statut
-                </label>
-                <select name="status">
-                    <option value="1">Brouillon</option>
-                    <option value="2">Publié</option>
-                    <option value="3">Archivé</option>
-                </select>
-            </div>
-        </div>
-	<div class="blockUploadImg">
-        <div class="inputChoice">
-            <div class="fileSelection">
-                <label for="imageUpload" class="labelImage">Télécharger votre nouvelle image d'article</label>
-                <input type="file" name="imageUpload" id="imageUpload" value = "Sélectionner un fichier"/>
-            </div>
-            <div class="blockNewImage">
-                <label for="newImg">Aperçu de votre nouvelle image</label>
-                <img id="preview"/>
-            </div>
-        </div>
-		
-        <div class="blockImage">
-            <label for="actualImg">Image actuelle</label>
-            <img class="actualImg" src="/{{articleUpdate.imgSrc}}">
-        </div>
-	</div>
-	<div class="buttons">
-		<input id="validate" type="submit" value="Valider">
-        <a id="cancel" href="/admin/articles/">Annuler</a>
-    </div>
-</form>
+					{% endfor %}
+				</select>
+			</div>
+			<div class="blockStatus">
+				<label for="status">Choix du statut
+				</label>
+				<select name="status">
+					<option value="1">Brouillon</option>
+					<option value="2">Publié</option>
+					<option value="3">Archivé</option>
+				</select>
+			</div>
+		</div>
+		<div class="blockUploadImg">
+			<div class="inputChoice">
+				<div class="fileSelection">
+					<label for="imageUpload" class="labelImage">Télécharger votre nouvelle image d'article</label>
+					<input type="file" name="imageUpload" id="imageUpload" value="Sélectionner un fichier"/>
+				</div>
+				<div class="blockNewImage">
+					<label for="newImg">Aperçu de votre nouvelle image</label>
+					<img id="preview"/>
+				</div>
+			</div>
+
+			<div class="blockImage">
+				<label for="actualImg">Image actuelle</label>
+				<img class="actualImg" src="/{{articleUpdate.imgSrc}}" alt="L'image n'existe pas dans le fichier !">
+			</div>
+		</div>
+		<div class="buttons">
+			<input id="validate" type="submit" value="Valider">
+			<a id="cancel" href="/admin/articles/">Annuler</a>
+		</div>
+	</form>
 {% endblock %}
